--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "45bc55ad",
    "metadata": {},
    "outputs": [
@@ -2710,7 +2710,7 @@
          "font": {
           "size": 20
          },
-         "text": "Optimized Route: Distance per Leg",
+         "text": "Optimized Route: Distance per Leg (Stop)",
          "x": 0.5,
          "xanchor": "center",
          "yanchor": "top"
@@ -2756,7 +2756,7 @@
     "    title='Optimized Route: Distance per Leg',\n",
     "    labels={'Distance_km': 'Distance (km)'},\n",
     ").update_layout(\n",
-    "    title={'text': \"Optimized Route: Distance per Leg\", 'x': 0.5, 'xanchor': 'center', 'yanchor': 'top', 'font': {'size': 20}},\n",
+    "    title={'text': \"Optimized Route: Distance per Leg (Stop)\", 'x': 0.5, 'xanchor': 'center', 'yanchor': 'top', 'font': {'size': 20}},\n",
     "    xaxis_tickangle=-45, \n",
     "    margin=dict(t=40, b=150),\n",
     "    )\n",
@@ -3657,7 +3657,7 @@
          "font": {
           "size": 20
          },
-         "text": "Distance Share per Leg (Optimized Route)",
+         "text": "Optimized Route: Distance Share per Leg (Stop)",
          "x": 0.5,
          "xanchor": "center",
          "yanchor": "top"
@@ -3678,7 +3678,7 @@
     "    sort=False,\n",
     "))\n",
     "fig_donut.update_layout(\n",
-    "    title={'text': \"Distance Share per Leg (Optimized Route)\", 'x': 0.5, 'xanchor': 'center', 'yanchor': 'top', 'font': {'size': 20}},\n",
+    "    title={'text': \"Optimized Route: Distance Share per Leg (Stop)\", 'x': 0.5, 'xanchor': 'center', 'yanchor': 'top', 'font': {'size': 20}},\n",
     "    margin=dict(l=40, r=40, t=40, b=40),\n",
     "    legend=dict(\n",
     "        x=1.02,\n",
@@ -4587,7 +4587,7 @@
          "font": {
           "size": 20
          },
-         "text": "Cumulative Distance by Stop",
+         "text": "Cumulative Distance by Leg (Stop)",
          "x": 0.5,
          "xanchor": "center",
          "yanchor": "top"
@@ -4622,7 +4622,7 @@
     "))\n",
     "fig_cumulative.update_layout(\n",
     "    title= {\n",
-    "        'text': \"Cumulative Distance by Stop\",\n",
+    "        'text': \"Cumulative Distance by Leg (Stop)\",\n",
     "        'x': 0.5,\n",
     "        'xanchor': 'center',\n",
     "        'yanchor': 'top',\n",
@@ -5593,7 +5593,7 @@
          "font": {
           "size": 20
          },
-         "text": "Estimated Travel Time per Leg",
+         "text": "Estimated Travel Time per Leg (Stop)",
          "x": 0.5,
          "xanchor": "center",
          "yanchor": "top"
@@ -5641,7 +5641,7 @@
     ").update_layout(\n",
     "    xaxis_tickangle=-45,\n",
     "    margin=dict(t=40, b=120),\n",
-    "    title={'text': 'Estimated Travel Time per Leg', 'x': 0.5, 'xanchor': 'center', 'yanchor': 'top', 'font': {'size': 20}}\n",
+    "    title={'text': 'Estimated Travel Time per Leg (Stop)', 'x': 0.5, 'xanchor': 'center', 'yanchor': 'top', 'font': {'size': 20}}\n",
     ")\n",
     "\n",
     "fig_time.show()"
@@ -5666,7 +5666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "fbf0f90a",
    "metadata": {},
    "outputs": [
@@ -6549,7 +6549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "cee4aa25",
    "metadata": {},
    "outputs": [
@@ -6574,7 +6574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "f943d4c6",
    "metadata": {},
    "outputs": [
