--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ef71d437",
    "metadata": {},
    "outputs": [
@@ -450,16 +450,19 @@
     }
    ],
    "source": [
-    "# Compute total distance\n",
+    "# Function to calculate the total distance of a route using the geodesic distance\n",
     "def total_distance(route):\n",
     "    distance = 0\n",
     "    for i in range(len(route) - 1):\n",
-    "        start = (route.loc[i]['latitude'], route.loc[i]['longitude'])\n",
-    "        end = (route.loc[i + 1]['latitude'], route.loc[i + 1]['longitude'])\n",
+    "        start = (route.iloc[i]['latitude'], route.iloc[i]['longitude'])\n",
+    "        end = (route.iloc[i + 1]['latitude'], route.iloc[i + 1]['longitude'])\n",
     "        distance += geodesic(start, end).km\n",
     "    return distance\n",
     "\n",
+    "# Calculate the total distance of the random route\n",
     "baseline_distance = total_distance(random_route)\n",
+    "\n",
+    "# Print the baseline distance\n",
     "print(f\"Baseline Distance(km): {baseline_distance:.0f} km\")"
    ]
   },
@@ -473,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f3637c80",
    "metadata": {},
    "outputs": [
@@ -482,19 +485,12 @@
      "output_type": "stream",
      "text": [
       "Optimized Distance: 8344 km\n",
-      "Time taken: 0.04 seconds\n"
+      "Time taken: 0.07 seconds\n"
      ]
     }
    ],
    "source": [
-    "def total_distance(route):\n",
-    "    distance = 0\n",
-    "    for i in range(len(route) - 1):\n",
-    "        start = (route.iloc[i]['latitude'], route.iloc[i]['longitude'])\n",
-    "        end = (route.iloc[i + 1]['latitude'], route.iloc[i + 1]['longitude'])\n",
-    "        distance += geodesic(start, end).km\n",
-    "    return distance\n",
-    "\n",
+    "# Function to calculate using the Nearest Neighbor algorithm\n",
     "def nearest_neighbor(locations):\n",
     "    start_time = time.time()\n",
     "\n",
@@ -526,9 +522,10 @@
     "    duration = time.time() - start_time\n",
     "    return route_df, total_distance(route_df), duration\n",
     "\n",
-    "# Run it\n",
+    "# Run the nearest neighbor algorithm\n",
     "route, distance, duration = nearest_neighbor(locations)\n",
     "\n",
+    "# Display the optimized distance and time taken\n",
     "print(f\"Optimized Distance: {distance:.0f} km\")\n",
     "print(f\"Time taken: {duration:.2f} seconds\")\n"
    ]
@@ -657,9 +654,13 @@
    "source": [
     "Model Description \n",
     "\n",
-    "To find the optimal distance - that is find the route to minimize the distance we created two models; baseline and optimized model. Before making optimized model, we created a baseline model. This model builds a route by randomly selecting next location. Baseline model is used as a starting point to compare better model which in this case is Optimized model. We used Python's `random` modele to shuffle the order of the locations and the `geopy` library to calculate the total distance of the route.To solve the route optimization problem, we created a model that applies the Newest algorithm to determine a travel path that minimizes the total distance between a series of geographic locations. The core idea of the algorithm is to starts from an initial point, then it randomly selects the nearest unvisited location until all points have been visited. The distance between each pair of locations is calculated using the `geopy` library's `geodesic` function, which measures distances between two points on a curved surface (like the Earth's) using geographic coordinate system - latitude (Y-axis) and longitude (X-axis) coordinates. \n",
+    "To find the optimal distance - that is find the route to minimize the distance we created two models; baseline and optimized model. Before making optimized model, we created a baseline model. This model builds a route by randomly selecting next location. Baseline model is used as a starting point to compare better model which in this case is Optimized model. We used Python's `random` modele to shuffle the order of the locations and the `geopy` library to calculate the total distance of the route.\n",
+    "\n",
+    "To solve the route optimization problem, we created a model that applies the Newest Neighbor algorithm to determine a travel path that minimizes the total distance between a series of geographic locations. The core idea of the algorithm is to starts from an initial point, then it randomly selects the nearest unvisited location until all points have been visited. The distance between each pair of locations is calculated using the `geopy` library's `geodesic` function, which measures distances between two points on a curved surface (like the Earth's) using geographic coordinate system - latitude (Y-axis) and longitude (X-axis) coordinates. \n",
+    "\n",
     "We experimented with two different approches of this algorithm. The first used a pandas-based approch, where each location was stored as a row in a DataFrame. This method was helpful when working with extra information such as name, place, or category because pandas makes it easier to organize and view the kind of data. The second one is used a list-based approach, where each location was sorted as a tuple of (latitude, longitude).The route was constructed by modifying a list of unvisited points and appending the nearest one at each step. This method was much simpler and faster especially because the dataset was small and didn't include any extra details. \n",
-    "After testing both methods, we chose the list-based version as the final approch. It was easier to read, ran quickly, and fit better with the size and simplicity of the dataset. "
+    "\n",
+    "After testing both methods, we chose the pandas-based approach as the final implementation. Although slightly more complex, it offered greater flexibility, made the data easier to inspect, and better supported our need to include and display additional details about each location."
    ]
   },
   {
@@ -841,7 +842,7 @@
            "size": 12
           },
           "showarrow": false,
-          "text": "Initial: 13005 km | Optimized: 8344 km | Time: 0.035 sec",
+          "text": "Initial: 13005 km | Optimized: 8344 km | Time: 0.066 sec",
           "x": 0.5,
           "xanchor": "center",
           "xref": "paper",
