--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -518,6 +518,7 @@
     "        route.append(current_location)\n",
     "        unvisited = unvisited.drop(index=nearest_index).reset_index(drop=True)\n",
     "\n",
+    "# Create a DataFrame from the route and calculate the total distance\n",
     "    route_df = pd.DataFrame(route)\n",
     "    duration = time.time() - start_time\n",
     "    return route_df, total_distance(route_df), duration\n",
